# Mekatrol.Automatum/Mekatrol.Automatum.Models/Flow.cs
@@ -3,7 +3,11 @@
 
 public class Flow : FlowSummary
 {
+    public bool Enabled { get; set; }
+
     public IList<FlowBlock> Blocks { get; set; } = [];
 
     public IList<FlowConnection> Connections { get; set; } = [];
+
+    public PersistState PersistState { get; set; }
 }
